// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
<div class="entry">
<h1>{{title}}</h1>
<div class="body">{{body}}</div></div>
</script>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>
      {{title}}
    </h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>

================================================================================
`;

exports[`template.html 2`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
<div class="entry">
<h1>{{title}}</h1>
<div class="body">{{body}}</div></div>
</script>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class='entry'>
    <h1>
      {{title}}
    </h1>
    <div class='body'>
      {{body}}
    </div>
  </div>
</script>

================================================================================
`;
